--- a/Bluehill.NativeCom/Directory.Build.targets
+++ b/Bluehill.NativeCom/Directory.Build.targets
@@ -1,4 +1,5 @@
 <Project>
+  <Import Project="..\Directory.Build.targets" />
   <ItemGroup>
     <AssemblyAttribute Remove="System.CLSCompliantAttribute" />
     <AssemblyAttribute Include="System.CLSCompliantAttribute">
