--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 ﻿<Project>
   <PropertyGroup>
     <Product>Bluehill.NativeCom</Product>
-    <PackageProjectUrl>https://na1307.github.io/Bluehill.NativeCom</PackageProjectUrl>
-    <PackageTags>nativeaot;aot;com;comwrappers;na1307;bluehill</PackageTags>
+    <PackageProjectUrl>https://bluehillnuget.github.io/Bluehill.NativeCom</PackageProjectUrl>
+    <PackageTags>nativeaot;aot;com;comwrappers;bluehill</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/na1307/Bluehill.NativeCom</RepositoryUrl>
