--- a/Bluehill.NativeCom.SourceGenerator/Bluehill.NativeCom.SourceGenerator.csproj
+++ b/Bluehill.NativeCom.SourceGenerator/Bluehill.NativeCom.SourceGenerator.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-    <NoWarn>$(NoWarn);RS1025;RS1026</NoWarn>
+    <NoWarn>$(NoWarn);RS1025;RS1026;SA1600</NoWarn>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
