--- a/.editorconfig
+++ b/.editorconfig
@@ -566,10 +566,6 @@ dotnet_diagnostic.ca1850.severity = warning
 # Possible multiple enumerations of IEnumerable collection
 dotnet_diagnostic.ca1851.severity = warning
 
-# Seal internal types
-dotnet_diagnostic.ca1852.severity = warning
-dotnet_code_quality.ca1852.ignore_internalsvisibleto = true
-
 # Unnecessary call to 'Dictionary.ContainsKey(key)'
 dotnet_diagnostic.ca1853.severity = warning
 
@@ -814,6 +810,9 @@ dotnet_diagnostic.rcs1042.severity = error
 # Declare each attribute separately
 dotnet_diagnostic.rcs1052.severity = error
 
+# Constant values should be placed on right side of comparisons
+dotnet_diagnostic.rcs1058.severity = error
+
 # Split variable declaration
 dotnet_diagnostic.rcs1081.severity = error
 
@@ -960,6 +959,9 @@ dotnet_diagnostic.rcs1110.severity = none
 # Remove redundant overriding member
 dotnet_diagnostic.rcs1132.severity = none
 
+# Use StringComparison when comparing strings
+dotnet_diagnostic.rcs1155.severity = none
+
 # Use string.Length instead of comparison with empty string
 dotnet_diagnostic.rcs1156.severity = none
 
@@ -1076,9 +1078,6 @@ dotnet_diagnostic.sa1123.severity = error
 
 # Use shorthand for nullable types
 dotnet_diagnostic.sa1125.severity = error
-
-# Use readable conditions
-dotnet_diagnostic.sa1131.severity = error
 
 # Use tuple syntax
 dotnet_diagnostic.sa1141.severity = error
@@ -1303,6 +1302,9 @@ dotnet_diagnostic.sa1127.severity = none
 
 # Put constructor initializers on their own line
 dotnet_diagnostic.sa1128.severity = none
+
+# Use readable conditions
+dotnet_diagnostic.sa1131.severity = none
 
 # Do not combine fields
 dotnet_diagnostic.sa1132.severity = none
@@ -1555,7 +1557,7 @@ csharp_indent_block_contents = true
 csharp_indent_braces = false
 csharp_indent_case_contents = true
 csharp_indent_case_contents_when_block = false
-csharp_indent_labels = flush_left
+csharp_indent_labels = one_less_than_current
 csharp_indent_switch_labels = true
 
 # 공간 기본 설정
@@ -1928,7 +1930,7 @@ resharper_outdent_binary_pattern_ops = false
 resharper_outdent_commas = false
 resharper_outdent_dots = false
 resharper_outdent_namespace_member = false
-resharper_outdent_statement_labels = false
+resharper_outdent_statement_labels = true
 resharper_outdent_ternary_ops = false
 resharper_parentheses_group_non_obvious_operations = none, arithmetic, conditional
 resharper_parentheses_non_obvious_operations = none, shift, bitwise_and, bitwise_exclusive_or, bitwise_inclusive_or, bitwise
@@ -2226,7 +2228,7 @@ resharper_wrap_for_stmt_header_style = wrap_if_long
 resharper_wrap_linq_expressions = chop_if_long
 resharper_wrap_list_pattern = wrap_if_long
 resharper_wrap_multiple_type_parameter_constraints_style = chop_if_long
-resharper_wrap_object_and_collection_initializer_style = chop_if_long
+resharper_wrap_object_and_collection_initializer_style = chop_always
 resharper_wrap_primary_constructor_parameters_style = chop_if_long
 resharper_wrap_property_pattern = chop_if_long
 resharper_wrap_switch_expression = chop_always
